--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,5 @@
 {
-  "presets": [
-      [
-          "@babel/preset-env",
-          {
-              "useBuiltIns": "entry"
-          }
-      ],
-      "@babel/preset-react"
-  ]
-}
+    "presets": [
+        "@babel/preset-env","@babel/preset-react"
+     ]
+  }
