--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   "license": "",
   "private": false,
   "scripts": {
-    "dev": "webpack serve --mode development --env development",
-
-
+    "dev": "webpack serve",
+    "start": "node server.js",
     "build": "webpack --mode production"
   },
   "dependencies": {
