--- a/package.json
+++ b/package.json
@@ -8,31 +8,31 @@
   "license": "",
   "private": false,
   "scripts": {
-    "dev": "webpack serve",
-    "start": "node server.js",
+    "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "acorn": "^8.5.0",
     "dayjs": "^1.8.27",
-    "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
-    "@webpack-cli/serve": "^1.0.1",
-    "babel-loader": "^8.1.0",
-    "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^4.5.0",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.1.0",
-    "style-loader": "0.23.*",
+    "@babel/core": "^7.9.6",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.9.4",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "8.1.0",
     "css-loader": "2.1.*",
-    "webpack-dev-server": "^3.11.0"
+    "eslint": "^7.0.0",
+    "eslint-plugin-react": "^7.20.0",
+    "html-loader": "0.5.*",
+    "html-webpack-plugin": "3.2.*",
+    "style-loader": "0.23.*",
+    "webpack": "4.29.*",
+    "webpack-cli": "3.2.*",
+    "webpack-dev-server": "3.1.*"
   }
 }
